--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </nav> -->
 
 <section class="hero">
-  <div class="hero-body">
+  <div class="hero-body" style="padding-bottom: 0rem";>
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
@@ -238,10 +238,12 @@
 
   <div class="container is-max-desktop">
     
+    <div class="content" style="text-align: center; align-items: center; justify-content: center; font-size: 20px; margin-bottom: 40px;">
+      TouchSDF helps robots understand and reconstruct 3D shapes using their sense of touch, both in simulations and in the real world.
+    </div>
+
     <div class="columns is-centered">
-
       <img src="./static/images/architecture_3.jpg" alt="Image"> 
-
     </div>
 
     <div class="content has-text-justified">
@@ -271,9 +273,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
-          <p>
           Humans rely on their visual and tactile senses to develop a comprehensive 3D understanding of their physical environment. Recently, there has been a growing interest in exploring and manipulating objects using data-driven approaches that utilise high-resolution vision-based tactile sensors. However, 3D shape reconstruction using tactile sensing has lagged behind visual shape reconstruction because of limitations in existing techniques, including the inability to generalise over unseen shapes, absence of real-world testing and limited expressive capacity imposed by discrete representations. To address these challenges, we propose <b>TouchSDF</b>, a Deep Learning approach for tactile 3D shape reconstruction that leverages the rich information provided by a vision-based tactile sensor and the expressivity of the implicit neural representation DeepSDF. This combination allows TouchSDF to reconstruct smooth and continuous 3D shapes from tactile inputs in simulation and real-world settings, opening up research avenues for robust 3D-aware representations and improved multimodal perception for robot manipulation.
-          </p>
         </div>
       </div>
       
@@ -301,11 +301,49 @@
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3">Reconstructions: ShapeNet</h2>
+      <h2 class="title is-3">Tactile data to contact geometry</h2>
+    </div>
+
+    <div class="columns is-centered" style="margin-top: 20px; ">
+      <img src="./static/images/data_collection_tactile_pointcloud.png" alt="Image" style="width: 80%;" > 
+    </div>
+
+  </div>
+
+</section>
+
+
+<section class="section">
+
+  <div class="container is-max-desktop">
+
+  <div class="columns is-centered has-text-centered" style="margin-top: 40px; ">
+    <h2 class="title is-3">Comparison with prior work</h2>
+  </div>
+
+  We compared our method to <a href="https://arxiv.org/abs/2107.09584">Smith et al.</a>'s' touch-only reconstruction approach, using the Earth Mover's Distance (EMD), Camfer Distance (CD), and Surface Reconstruction Error as metrics. TouchSDF achieves better EMD and Surface Reconstruction Error, while achieving slightly lower CD despite a better visual quality. 
+
+  <div class="columns is-centered" style="margin-top: 20px; ">
+    <img src="./static/images/comparison_smith_new.jpg" alt="Image" style="width: 90%;" > 
+  </div>
+  </div>
+</section>
+
+
+</div>
+
+</section>
+
+<section class="section">
+
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <h2 class="title is-3">Reconstructions: Simulation</h2>
     </div>
 
     <div class="columns is-centered has-text-centered" style="margin-top: 20px;">
-      <p>You can interact with the Ground truth and Reconstructed meshes below to assess the quality of our 3D shape reconstruction approach.</p>
+      <p>You can interact with the ground truth and reconstructed meshes below to assess the quality of our 3D shape reconstruction approach.</p>
     </div>
   
     <!-- Camera -->
@@ -358,10 +396,30 @@
         }
       });
     </script>
+
   </div>
 
 </section>
 
+
+
+<section class="section">
+
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <h2 class="title is-3">Reconstructions: Real world</h2>
+    </div>
+
+    Our method successfully reconstructed real 3D-printed objects and additional everyday objects (a mug and a transparent jar), achieving low EMD values that are comparable to those obtained in simulation.
+
+    <div class="columns is-centered" style="margin-top: 20px; ">
+      <img src="./static/images/reconstruction_real.jpg" alt="Image" style="width: 80%;" > 
+    </div>
+
+  </div>
+
+</section>
 
 
 
