--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/maurock/TouchSDF"
                    class="external-link button is-normal is-rounded btn-grad">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming soon..)</span>
+                  <span>Code</span>
                   </a>
               </span>
 
