--- a/index.html
+++ b/index.html
@@ -85,12 +85,19 @@
           <h1 class="title is-1 publication-title">TouchSDF: A DeepSDF Approach for 3D Shape Reconstruction Using Vision-Based Tactile Sensing</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Author</a><sup>1</sup></span>
-  
+              <span style="color:hsl(204, 86%, 53%)">Mauro Comi</span><sup>1</sup></span>,
+              <span style="color:hsl(204, 86%, 53%)">Yijiong Lin</span><sup>1,2</sup></span>,
+              <span style="color:hsl(204, 86%, 53%)">Alex Church</span><sup>1</sup></span>,
+              <span style="color:hsl(204, 86%, 53%)">Alessio Tonioni</span><sup>3</sup></span>,
+              <span style="color:hsl(204, 86%, 53%)">Laurence Aitchison</span><sup>1</sup></span>,
+              <span style="color:hsl(204, 86%, 53%)">Nathan Lepora</span><sup>1,2</sup></span>,
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University</span>
+            <span class="author-block"><sup>1</sup>University of Bristol</span>,
+            <span class="author-block"><sup>2</sup>Bristol Robotics Laboratory</span>,
+            <span class="author-block"><sup>3</sup>Google Zürich</span>
+
           </div>
 
           <div class="column has-text-centered">
