--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
+
+              <!-- Paper Link. -->
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2311.12602"
+                   class="external-link button is-normal is-rounded btn-grad">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>ArXiv Paper</span>
+                </a>
+              </span>
+
               <!-- PDF Link. -->
               <span class="link-block">
                 <a href="documents/supplementary.pdf"
